<resources>
    <string name="app_name">MUKBANG</string>
    <string name="splashscreen_app_logo_img">app logo</string>
    <string name="app_fullname_title">Mobile UKBM Bangun Ruang</string>
    <string name="action_start">mulai</string>
    <string name="landing_dev_info_button">informasi pengembang</string>
    <string name="login_background_img">login backround</string>
    <string name="login_to_app_title">Login untuk masuk ke Mukbang</string>
    <string name="login_input_name_hint">Masukkan Nama</string>
    <string name="action_login">masuk</string>
    <string name="login_already_text">Sudah pernah login?</string>
    <string name="action_skip">Lewati</string>
    <string name="manual_num_one_text">1.</string>
    <string name="manual_num_two_text">2.</string>
    <string name="manual_num_three_text">3.</string>
    <string name="manual_instruction_one_text">Pelajari dan pahami materi mengenai bangun ruang sisi datar yang terdapat pada buku teks pembelajaran.</string>
    <string name="manual_instruction_two_text">Ikuti langkah-langkah pembelajaran yang terdapat pada mobile-ukbm ini bersama kelompokmu.</string>
    <string name="manual_instruction_three_text">Kerjakan soal-soal yang tersedia pada mobile-ukbm</string>
    <string name="quiz_num">Soal dari %1$s dari %2$s</string>
    <string name="quiz_explanation_key">Jawaban %1$s</string>
    <string name="dialog_score_title">%1$s, skor kamu adalah:</string>
    <string name="error_must_be_answered">Harus dijawab ya!</string>
    <string name="error_incorrect_answer">Ada yang masih salah nih!</string>
    <string name="introduction_title">Pendahuluan</string>
    <string name="home_view_score_text">Lihat skor kamu di sini</string>
    <string name="score_username">Hai, %1$s!</string>
    <string name="quiz_title">Kuis</string>
    <string name="quiz_subtitle">Uji kemampuanmu di sini!</string>
    <string name="materials_subtitle">Yuk mulai belajar!</string>
    <string name="materials_title">Materi</string>
    <string name="ref_1_text">Kementerian Pendidikan dan Kebudayaan. 2016. Buku Siswa Mata Pelajaran Matematika Pekerti Jakarta: Kementerian Pendidikan dan Kebudayaan.</string>
    <string name="ref_2_text">Kementerian Pendidikan dan Kebudayaan. 2016. Buku Guru Mata Pelajaran Matematika Jakarta: Kementerian Pendidikan dan Kebudayaan</string>
    <string name="ref_3_text">http://fikri-ravansyah07.blogspot.com/2014/05/soal-dan-pembahasan-matematika-kubus.html</string>
    <string name="ref_4_text">https://idschool.net/contoh-soal-bangun-ruang-sisi-datar-matematika-smp-2/</string>
    <string name="ref__text">https://youtu.be/1XOvoj0_DDs</string>
    <string name="ref_title">Daftar Pustaka</string>
    <string name="cube_title">Kubus &amp; Balok</string>
    <string name="prism_title">Prisma</string>
    <string name="pyramid_title">Limas</string>
    <string name="evaluation_title">Evaluasi</string>
</resources>