<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.manual.ManualFragment">

    <TextView
        android:id="@+id/text_num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_num_one_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_instruction_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/manual_instruction_one_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_num_1"
        app:layout_constraintTop_toTopOf="@id/text_num_1" />

    <TextView
        android:id="@+id/text_num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manual_num_two_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toStartOf="@id/text_num_1"
        app:layout_constraintTop_toBottomOf="@id/text_instruction_1" />

    <TextView
        android:id="@+id/text_instruction_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/manual_instruction_two_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_num_2"
        app:layout_constraintTop_toTopOf="@id/text_num_2" />

    <TextView
        android:id="@+id/text_num_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manual_num_three_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toStartOf="@id/text_num_2"
        app:layout_constraintTop_toBottomOf="@id/text_instruction_2" />

    <TextView
        android:id="@+id/text_instruction_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/manual_instruction_three_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_num_3"
        app:layout_constraintTop_toTopOf="@id/text_num_3" />
</androidx.constraintlayout.widget.ConstraintLayout>