<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_general"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="242dp" />

        <ImageView
            android:id="@+id/image_login_background"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:contentDescription="@string/login_background_img"
            android:src="@drawable/bg_login"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_login"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="24dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/image_app_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/splashscreen_app_logo_img"
                android:src="@drawable/img_app_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/text_color_login_button"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_app_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_app_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_fullname_title"
                android:textColor="@color/text_color_landing_button"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/text_app_name"
                app:layout_constraintStart_toStartOf="@id/text_app_name"
                app:layout_constraintTop_toBottomOf="@id/text_app_name" />

            <TextView
                android:id="@+id/text_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:text="@string/login_to_app_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintTop_toBottomOf="@id/image_app_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_login_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_login_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_input_name_hint"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/field_login_name"
                app:layout_constraintBottom_toTopOf="@id/text_skip"
                android:id="@+id/text_already_login"
                android:text="@string/login_already_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintBottom_toBottomOf="@id/button_login"
                app:layout_constraintStart_toStartOf="@id/text_already_login"
                android:id="@+id/text_skip"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/action_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/text_color_login_button"
                android:text="@string/action_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_login_name"
                app:shapeAppearanceOverlay="@style/CircularButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>