<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_general"
        tools:context=".ui.landing.LandingFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <ImageView
            android:id="@+id/image_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splashscreen_app_logo_img"
            android:src="@drawable/img_app_logo"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_app_logo" />

        <TextView
            android:id="@+id/text_app_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_fullname_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/text_color_app"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_name" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/action_start"
            android:textColor="@color/text_color_landing_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_dev_info"
            app:layout_constraintEnd_toEndOf="@id/button_dev_info"
            app:layout_constraintStart_toStartOf="@id/button_dev_info"
            app:shapeAppearanceOverlay="@style/CircularButton" />

        <Button
            android:id="@+id/button_dev_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/landing_dev_info_button"
            android:textAllCaps="true"
            android:textColor="@color/text_color_landing_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/CircularButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>